# VI-MEAN

./: LICENSE  README.md
OpenChisel/: truncator.m  untitled.fig
OpenChisel/chisel_ros/: catkin.cmake  package.xml
OpenChisel/chisel_ros/launch/: euroc.launch  euroc.launch.bak  launch_freiburg_dataset.launch  launch_kinect_local.launch  sample.launch
OpenChisel/chisel_ros/src/: ChiselNode.cpp  ChiselServer.cpp
OpenChisel/open_chisel/: catkin.cmake
OpenChisel/open_chisel/src/: Chisel.cpp  (+2 more)
camera_model/: CMakeLists.txt
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/config/: 04_camera_calib.yaml  09_camera_calib.yaml  11_camera_calib.yaml  25000049_camera_calib.yaml  25001283_camera_calib.yaml  61_camera_calib.yaml  61_camera_calib.yaml.bak  82_camera_calib.yaml  bbgf_camera_calib.yaml  euroc0_camera_calib.yaml  euroc1_camera_calib.yaml  fisheye_camera_calib.yaml  fisheye_camera_calib.yaml.bak  lin3_0_camera_calib.yaml  lin3_1_camera_calib.yaml  lin4_1_camera_calib.yaml  ling1_left_camera_calib.yaml  sample_camera_calib.yaml  vi_l_camera_calib.yaml  vi_l_cv.yml  vi_r_cv.yml
feature_tracker/launch/: feature_tracker.launch
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
self_calibration_estimator/: CMakeLists.txt  keng.txt  package.xml
self_calibration_estimator/config/: sample.rviz
self_calibration_estimator/launch/: bag.launch  gps.launch  mapping.launch  mapping_tag.launch  online.launch  online_large.launch  online_tag.launch  sensor.launch  simulation.launch  vi_online.launch
self_calibration_estimator/launch/benchmark/: MH_01.launch  V1_01.launch  V2_01.launch  fisheye.launch  hkust_in.launch  hkust_out.launch  hkust_out2.launch  hkust_out3.launch  hkust_out4.launch  system.launch  system2.launch  system_part2.launch  system_part3.launch  system_part4.launch
self_calibration_estimator/launch/bias/: bias_simulation.launch
self_calibration_estimator/launch/mapping/: bbgf.launch  lin.launch  qiu.launch  sample.launch
self_calibration_estimator/src/: RK4_integration.h  euler_integration.h  feature_manager.cpp  feature_manager.h  imu_factor.h  integration.cpp  integration_base.h  marginalization.cpp  marginalization.h  marginalization_factor.cpp  marginalization_factor.h  midpoint_integration.h  motion_estimator.cpp  motion_estimator.h  parameters.cpp  parameters.h  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  self_calibration_estimator.cpp  self_calibration_estimator.h  self_calibration_estimator_node.cpp  utility.cpp  utility.h  visualization.cpp  visualization.h
stereo_mapper/: CMakeLists.txt  package.xml  todo.txt
stereo_mapper/calib/0049/: a.txt  left.yml  stereo.yml
stereo_mapper/calib/euroc/: euroc.txt  left.yml  right.yml  stereo.yml
stereo_mapper/calib/lin/: left.yml  lin.txt  right.yml  stereo.yml
stereo_mapper/calib/lin2/: a.txt  left.yml  right.yml  stereo.yml
stereo_mapper/calib/lin3/: a.txt  left.yml  right.yml  stereo.yml
stereo_mapper/calib/lin4/: left.yml  right.yml
stereo_mapper/calib/ling1/: left.yml
stereo_mapper/calib/sample/: left.yml
stereo_mapper/cfg/: debug.cfg
stereo_mapper/launch/: bluefox.launch  euroc.launch  kitti.launch  lin.launch  ling.launch  sample.launch  sample_all.launch
stereo_mapper/src/: calc_cost.cpp  calc_cost.cu  calc_cost.cu.bak  calc_cost.h  gpu_test.cpp  parameters.cpp  parameters.h  stereo_mapper.cpp  stereo_mapper.h  stereo_mapper_node.cpp
(+13 files in other folders)
